--- a/usr/local/etc/nginx/vhosts/defaults.conf
+++ b/usr/local/etc/nginx/vhosts/defaults.conf
@@ -9,14 +9,12 @@ server {
     #access_log  logs/host.access.log  main;
 
     location / {
-        root /usr/local/www/nginx;
         try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
-        fastcgi_index index.php;
-        fastcgi_pass 127.0.0.1:9000;
-        include /usr/local/etc/nginx/fastcgi_params;
+        include fastcgi_params;
+        fastcgi_pass unix:/var/run/php-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
@@ -24,5 +22,20 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/local/www/nginx-dist;
+    }
+
+    location /phpmyadmin {
+        alias /usr/local/www/phpMyAdmin;
+        index index.php;
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass unix:/var/run/php-fpm.sock;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+        }
+    }
+
+    location /phpmyadmin {
+        rewrite ^/* /phpMyAdmin last;
     }
 }
