--- a/usr/local/etc/nginx/vhosts/defaults_ssl.conf
+++ b/usr/local/etc/nginx/vhosts/defaults_ssl.conf
@@ -1,7 +1,7 @@
 server {
     listen       443 ssl http2;
     server_name  localhost;
-    root /usr/local/www;
+    root /usr/local/www/nginx;
     index index.php index.html index.htm;
 
     #charset koi8-r;
@@ -14,40 +14,33 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        root /usr/local/www/nginx;
         try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
-        fastcgi_index index.php;
-        fastcgi_pass 127.0.0.1:9000;
-        include /usr/local/etc/nginx/fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location /phpMyAdmin {
-        root /usr/local/www;
-        index index.php;
-    }
-
-    location ~ ^/phpMyAdmin.+\.php$ {
-        root /usr/local/www;
         include fastcgi_params;
-    }
-
-    location ~ ^/phpMyAdmin.+\.(js|css|png|jpg|jpeg|gif|ico)$ {
-        root /usr/local/www;
-        expires max;
-        log_not_found off;
-    }
-
-    location /phpmyadmin {
-        rewrite ^/* /phpMyAdmin last;
+        fastcgi_pass unix:/var/run/php-fpm.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     error_page 404 /404.html;
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/local/www/nginx-dist;
+    }
+
+    location /phpmyadmin {
+        alias /usr/local/www/phpMyAdmin;
+        index index.php;
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass unix:/var/run/php-fpm.sock;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+        }
+    }
+
+    location /phpmyadmin {
+        rewrite ^/* /phpMyAdmin last;
     }
 }
