--- a/usr/local/etc/nginx/vhosts/defaults.conf
+++ b/usr/local/etc/nginx/vhosts/defaults.conf
@@ -1,9 +1,8 @@
 server {
     listen       80;
     server_name  localhost;
-    root /usr/local/www;
+    root /usr/local/www/nginx;
     index index.php index.html index.htm;
-    return 301 https://$host$request_uri;
 
     #charset koi8-r;
     #access_log  logs/host.access.log  main;
@@ -18,12 +17,6 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    error_page 404 /404.html;
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/local/www/nginx-dist;
-    }
-
     location /phpmyadmin {
         alias /usr/local/www/phpMyAdmin;
         index index.php;
@@ -35,7 +28,10 @@ server {
         }
     }
 
-    location /phpmyadmin {
-        rewrite ^/* /phpMyAdmin last;
+    error_page 404 /404.html;
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/local/www/nginx-dist;
     }
+
 }
