--- a/usr/local/etc/nginx/vhosts/defaults_ssl.conf
+++ b/usr/local/etc/nginx/vhosts/defaults_ssl.conf
@@ -1,8 +1,6 @@
 server {
     listen       443 ssl http2;
     server_name  localhost;
-    root /usr/local/www/nginx;
-    index index.php index.html index.htm;
 
     #charset koi8-r;
     #access_log  logs/host.access.log  main;
@@ -14,6 +12,8 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
+        root /usr/local/www/nginx;
+        index index.php index.html index.htm;
         try_files $uri $uri/ =404;
     }
 
@@ -23,15 +23,24 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    location /phpmyadmin {
-        alias /usr/local/www/phpMyAdmin;
+    location /phpMyAdmin {
+        root /usr/local/www;
         index index.php;
+    }
 
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass unix:/var/run/php-fpm.sock;
-            fastcgi_param SCRIPT_FILENAME $request_filename;
-        }
+    location ~ ^/phpMyAdmin.+\.php$ {
+        root /usr/local/www;
+        include fastcgi_params;
+    }
+
+    location ~ ^/phpMyAdmin.+\.(js|css|png|jpg|jpeg|gif|ico)$ {
+        root /usr/local/www;
+        expires max;
+        log_not_found off;
+    }
+
+    location /phpmyadmin {
+        rewrite ^/* /phpMyAdmin last;
     }
 
     error_page 404 /404.html;
