--- a/usr/local/etc/mysql/my.cnf
+++ b/usr/local/etc/mysql/my.cnf
@@ -5,7 +5,7 @@
 #
 [client-server]
 port	= 3306
-socket	= /tmp/mysql.sock
+socket	= /var/run/mysql/mysql.sock
 
 #
 # include *.cnf from the config directory
